--- a/telegram_gcloner/config.ini
+++ b/telegram_gcloner/config.ini
@@ -1,8 +1,8 @@
 [General]
 path_to_gclone =
 
-telegram_token =
-user_ids = -1
-group_ids = -1
+telegram_token =1798516668:AAFkm3tFKUVD-3rdPkofJRV3nLqraguL5t8
+user_ids = 1233817369
+group_ids = 1233817369,-1001346856621
 
 gclone_para_override =
